Added .gitattributes to enforce LF line endings. Modified cleaning folders process, so user has to confirm folder deletion.